--- a/SentimentBasedProductRecommendationSystem.ipynb
+++ b/SentimentBasedProductRecommendationSystem.ipynb
@@ -1,6 +1,53 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s__E9SpvkE-U"
+      },
+      "source": [
+        "#### **Problem Statment**\n",
+        "The e-commerce business is quite popular today. Here, you do not need to take orders by going to each customer. A company launches its website to sell the items to the end consumer, and customers can order the products that they require from the same website. Famous examples of such e-commerce companies are Amazon, Flipkart, Myntra, Paytm and Snapdeal.\n",
+        "\n",
+        "Suppose you are working as a Machine Learning Engineer in an e-commerce company named 'Ebuss'. Ebuss has captured a huge market share in many fields, and it sells the products in various categories such as household essentials, books, personal care products, medicines, cosmetic items, beauty products, electrical appliances, kitchen and dining products and health care products.\n",
+        "\n",
+        "With the advancement in technology, it is imperative for Ebuss to grow quickly in the e-commerce market to become a major leader in the market because it has to compete with the likes of Amazon, Flipkart, etc., which are already market leaders.\n",
+        "\n",
+        "As a senior ML Engineer, you are asked to build a model that will improve the recommendations given to the users given their past reviews and ratings.\n",
+        "\n",
+        "In order to do this, you planned to build a sentiment-based product recommendation system, which includes the following tasks.\n",
+        "\n",
+        "Data sourcing and sentiment analysis\n",
+        "Building a recommendation system\n",
+        "Improving the recommendations using the sentiment analysis model\n",
+        "Deploying the end-to-end project with a user interface\n",
+        "\n",
+        "\n",
+        "**Steps involved in the project**\n",
+        "\n",
+        "1. Exploratory data analysis\n",
+        "2. Data cleaning\n",
+        "3. Text preprocessing\n",
+        "4. Feature extraction\n",
+        "5. Training the text classification model\n",
+        "6. Creating a recommendation systems and choose the best one\n",
+        "   a. User based\n",
+        "   b. Item Based\n",
+        "7. Evaluating the model and recommendation system using the Test data\n",
+        "8. Create flask application\n",
+        "9. Deploy the application to heroku platform"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ej2Vaz_Kk5LZ"
+      },
+      "source": [
+        "### **Importing Libraries**"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -13798,51 +13845,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bm1hEksKRhgX",
-        "outputId": "acc60ffb-dd01-40bd-a2a5-7823bd3304cb"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "Index: 29943 entries, 0 to 29999\n",
-            "Data columns (total 15 columns):\n",
-            " #   Column               Non-Null Count  Dtype \n",
-            "---  ------               --------------  ----- \n",
-            " 0   id                   29943 non-null  object\n",
-            " 1   brand                29943 non-null  object\n",
-            " 2   categories           29943 non-null  object\n",
-            " 3   manufacturer         29802 non-null  object\n",
-            " 4   name                 29943 non-null  object\n",
-            " 5   reviews_date         29897 non-null  object\n",
-            " 6   reviews_didPurchase  15894 non-null  object\n",
-            " 7   reviews_doRecommend  27375 non-null  object\n",
-            " 8   reviews_rating       29943 non-null  int64 \n",
-            " 9   reviews_text         29943 non-null  object\n",
-            " 10  reviews_title        29753 non-null  object\n",
-            " 11  reviews_username     29880 non-null  object\n",
-            " 12  user_sentiment       29943 non-null  int64 \n",
-            " 13  full_review          29943 non-null  object\n",
-            " 14  cleaned_review       29943 non-null  object\n",
-            "dtypes: int64(2), object(13)\n",
-            "memory usage: 3.7+ MB\n"
-          ]
-        }
-      ],
-      "source": [
-        "products_review_data.info()\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 111,
       "metadata": {
         "id": "wQVLmymYcdM6"
@@ -14029,11 +14031,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "75z5FJNDhtWJ"
+      },
+      "source": [
+        "1.   The above code combines collaborative filtering + model confidence.\n",
+        "2.   Less biased by small sample sizes.\n",
+        "3.   probabilities for ranking.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "7iBbFAdrh0Lx"
+      },
       "outputs": [],
       "source": [
+        "\n",
         "# Heroku URL - https://sentiment-recommender-ba637b2d7e39.herokuapp.com/predict"
       ]
     }
